# AiStore

./: .gitignore  LICENSE  Makefile  README.md  requirements.txt
Models/notebooks/: GraphSAGE.ipynb
RecSystem/: Makefile
Recommendation/: TODO.md  logger.py  run.py  settings.py
Recommendation/docs/: Preprocessing.md
Recommender/: TODO.md  run.py  settings.py
Recommender_V1/: TODO.md  run.py
Recommender_V1/notebook_2/: lightGBM.ipynb  xgboost.ipynb
Recommender_V1/notebooks/: build_graph.ipynb  (+4 more)
Recommender_V2/: TODO.md  TODO_2.md  settings.py
recommendation/: README.md  pyproject.toml  run.py  setup.py
recommendation/config/: base_config.ini
recommendation/src/: __init__.py
recommendation/src/datasets/: LinkPredictionDataset.py
recommendation/src/inference/: inference.py
recommendation/src/models/: __init__.py  graphsage.py
recommendation/src/preprocessing/: __init__.py  data_loader.py  graph_builder.py  preprocessing.py
recommendation/src/recommender/: recommender.py
recommendation/src/training/: __init__.py  callbacks.py  eval.py  loss.py  save_trained_model.py  train.py  training.py
recommendation/src/utils/: __init__.py  link_utils.py  load_data.py
recommendation/src/visualization/: __init__.py  visualizations.py
recommendation/tests/: test_model.py  test_pipline.py  test_train_loop.py  test_visualization.py
recommendation/tests/preprocessing/: test_clean_text.py  test_graph_builder.py  test_graph_dataset.py  test_mappings.py  test_preprocessing.py
recommender/: Makefile  TODO.md  requirements.txt  run.py  settings.py
(+594 files in other folders)
