[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storex-recommender"
version = "0.1.0"
description = "A GraphSAGE-based recommendation system for eCommerce"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Abdalrhman", email = "youremail@example.com" }
]

dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "pandas",
    "networkx",
    "tqdm",
    "scikit-learn",
    "matplotlib",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "jupyter",
    "pre-commit"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = false

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
